<resources>
    <string name="app_name">Sleep</string>
    <string name="text_loading">加载中...</string>
    <string name="network_connection_failed">网络连接失败</string>
    <string name="network_request_timeout">网络请求超时</string>
    <string name="api_data_parse_error">数据解析错误</string>
    <string name="text_into_app">进入App</string>
    <string name="text_default">默认</string>
    <string name="text_start_sleep">开始睡眠</string>
    <string name="text_login_or_register">登录/注册</string>
    <string name="text_welcome">Welcome to Sleep</string>
    <string name="text_userself_sound">享受你的私人专属音轨</string>
    <string name="text_open">立即开通</string>
    <string name="text_clear_cache">清理缓存</string>
    <string name="text_user_privincy">用户协议</string>
    <string name="text_user_protocol">用户协议</string>
    <string name="text_about">关于我们</string>
    <string name="text_feedback">意见反馈</string>
    <string name="text_vip_choose">选择套餐</string>
    <string name="text_input_phone">请输入手机号</string>
    <string name="text_input_code">请输入验证码</string>
    <string name="text_send">发送</string>
    <string name="text_other_login">其他登录方式</string>
    <string name="text_login_fb">Facebook</string>
    <string name="text_login_google">Google</string>
    <string name="text_login_weChat">weChat</string>
    <string name="text_login_result">登录即代表您同意</string>
    <string name="text_protocol">《用户协议》</string>
    <string name="text_upload_photo">上传图片</string>
    <string name="text_phone">联系方式</string>
    <string name="text_feedback_submit">提交反馈</string>
    <string name="text_write_storage">写入权限</string>
    <string name="text_camera">摄像头</string>
    <string name="text_read_storage">读取权限</string>
    <string name="permission_get">权限请求</string>
    <string name="permission_desc">亲：为了更好的使用此APP请同意以下权限</string>
    <string name="text_split">截取</string>
    <string name="text_merger">合成</string>
    <string name="text_first">第一首</string>
    <string name="text_first_start">第一首开始</string>
    <string name="text_first_stop">第一首结束</string>
    <string name="text_second_start">第二首开始</string>
    <string name="text_second_stop">第二首结束</string>
    <string name="text_third_start">第三首开始</string>
    <string name="text_third_stop">第三首结束</string>
    <string name="text_cancel">取消</string>
    <string name="text_sure">确定</string>
    <string name="text_hour">H</string>
    <string name="text_minute">m</string>
</resources>