<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="imageUrl"
            type="String" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_user"
            android:layout_width="@dimen/dp_62"
            android:layout_height="@dimen/dp_62"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/dp_40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            bind:imageUrl="@{imageUrl}"
            bind:placeholderResID="@{@drawable/ic_user}" />

        <Button
            android:id="@+id/btn_one_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/text_first_start"
            android:textColor="@color/colorGreen"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_user"
            app:layout_constraintWidth_percent="0.5" />

        <Button
            android:id="@+id/btn_one_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/text_first_stop"
            android:textColor="@color/colorGreen"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toEndOf="@+id/btn_one_start"
            app:layout_constraintTop_toBottomOf="@+id/img_user"
            app:layout_constraintWidth_percent="0.5" />

        <Button
            android:id="@+id/btn_two_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/text_second_start"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_one_start"
            app:layout_constraintWidth_percent="0.5" />

        <Button
            android:id="@+id/btn_two_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/text_second_stop"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toEndOf="@+id/btn_two_start"
            app:layout_constraintTop_toBottomOf="@+id/btn_one_start"
            app:layout_constraintWidth_percent="0.5" />

        <Button
            android:id="@+id/btn_third_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/text_third_start"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_two_start"
            app:layout_constraintWidth_percent="0.5" />

        <Button
            android:id="@+id/btn_third_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/text_third_stop"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toEndOf="@+id/btn_third_start"
            app:layout_constraintTop_toBottomOf="@+id/btn_two_start"
            app:layout_constraintWidth_percent="0.5" />


        <SeekBar
            android:id="@+id/progress"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_10"
            android:layout_margin="@dimen/dp_30"
            android:max="100"
            app:layout_constraintTop_toBottomOf="@+id/btn_third_stop" />


        <com.gnetop.letui.sleep.ui.datetime.time.HourAndMinutePicker
            android:id="@+id/hour_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            app:layout_constraintTop_toBottomOf="@+id/progress" />

        <Button
            android:id="@+id/btn_sure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/text_sure"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hour_picker"
            app:layout_constraintWidth_percent="0.5" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/text_cancel"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toEndOf="@+id/btn_sure"
            app:layout_constraintTop_toBottomOf="@+id/hour_picker"
            app:layout_constraintWidth_percent="0.5" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>