<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:yk="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_67"
            android:text="@string/app_name"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_22"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctl_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_79"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_login_title">


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_login_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginEnd="@dimen/dp_30"
                android:background="@drawable/edt_line"
                android:hint="@string/text_input_phone"
                android:inputType="number"
                android:padding="@dimen/dp_5"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorHintText"
                android:textSize="@dimen/sp_14"
                tools:ignore="MissingConstraints,TextFields" />

            <FrameLayout
                android:id="@+id/fyt_login_code"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_34"
                android:layout_marginEnd="@dimen/dp_30"
                android:background="@drawable/edt_line"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_login_phone"
                tools:ignore="MissingConstraints">


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_login_code"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/dp_5"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:background="@null"
                    android:hint="@string/text_input_code"
                    android:inputType="number"
                    android:padding="@dimen/dp_5"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorHintText"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/txt_login_code"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_40"
                    android:layout_gravity="end|center_vertical"
                    android:text="@string/text_send"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp_14" />
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/txt_other_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_marginBottom="@dimen/dp_200"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/text_other_login"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_fb_login"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_44"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_15"
            android:src="@drawable/ic_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_other_login"
            app:layout_constraintWidth_percent="0.3" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_google_login"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_44"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_15"
            android:src="@drawable/ic_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_other_login"
            app:layout_constraintWidth_percent="0.3" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_wx_login"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_44"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_15"
            android:src="@drawable/ic_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_other_login"
            app:layout_constraintWidth_percent="0.3" />

        <TextView
            android:id="@+id/txt_login_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/text_login_fb"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="@+id/img_fb_login"
            app:layout_constraintStart_toStartOf="@+id/img_fb_login"
            app:layout_constraintTop_toBottomOf="@+id/img_fb_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/text_login_google"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="@+id/img_google_login"
            app:layout_constraintStart_toStartOf="@+id/img_google_login"
            app:layout_constraintTop_toBottomOf="@+id/img_google_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/text_login_weChat"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="@+id/img_wx_login"
            app:layout_constraintStart_toStartOf="@+id/img_wx_login"
            app:layout_constraintTop_toBottomOf="@+id/img_wx_login" />

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_40"
            android:text="@string/text_login_result"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_login_fb" />

        <TextView
            android:id="@+id/txt_login_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_protocol"
            android:textColor="@color/colorGreen"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toBottomOf="@+id/txt_login"
            app:layout_constraintStart_toEndOf="@+id/txt_login"
            app:layout_constraintTop_toTopOf="@+id/txt_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>