<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.yk.silence.toolbar.CustomTitleBar
            android:id="@+id/title_user"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            app:layout_constraintTop_toTopOf="parent"
            app:leftImage="@drawable/ic_back" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_user_avatar"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:src="@drawable/ic_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_user" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/img_user_avatar"
            app:layout_constraintStart_toEndOf="@+id/img_user_avatar"
            app:layout_constraintTop_toTopOf="@+id/img_user_avatar">

            <TextView
                android:id="@+id/txt_user_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_welcome"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_14" />

            <Button
                android:id="@+id/btn_user_login"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_44"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@drawable/btn_10_green_bg"
                android:text="@string/text_login_or_register"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_14" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cst_user_vip"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_100"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_15"
            android:background="@drawable/btn_10_green_bg"
            app:layout_constraintTop_toBottomOf="@+id/img_user_avatar">

            <LinearLayout
                android:id="@+id/lyt_user_sound"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_80"
                android:layout_marginStart="@dimen/dp_15"
                android:gravity="center_vertical"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_welcome"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="@string/text_userself_sound"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_user_open"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_15"
                android:background="@drawable/btn_10_green_bg"
                android:text="@string/text_open"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBottom_toBottomOf="@+id/lyt_user_sound"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/lyt_user_sound" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/txt_user_clear"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_15"
            android:drawablePadding="@dimen/dp_15"
            android:gravity="center_vertical"
            android:text="@string/text_clear_cache"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_14"
            app:drawableEndCompat="@drawable/ic_user"
            app:drawableStartCompat="@drawable/ic_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cst_user_vip" />

        <TextView
            android:id="@+id/txt_user_protocol"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_15"
            android:drawablePadding="@dimen/dp_15"
            android:gravity="center_vertical"
            android:text="@string/text_user_protocol"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_14"
            app:drawableEndCompat="@drawable/ic_user"
            app:drawableStartCompat="@drawable/ic_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_user_clear" />

        <TextView
            android:id="@+id/txt_user_about"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_15"
            android:drawablePadding="@dimen/dp_15"
            android:gravity="center_vertical"
            android:text="@string/text_about"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_14"
            app:drawableEndCompat="@drawable/ic_user"
            app:drawableStartCompat="@drawable/ic_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_user_protocol" />

        <TextView
            android:id="@+id/txt_user_feedback"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_15"
            android:drawablePadding="@dimen/dp_15"
            android:gravity="center_vertical"
            android:text="@string/text_feedback"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_14"
            app:drawableEndCompat="@drawable/ic_user"
            app:drawableStartCompat="@drawable/ic_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_user_about" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>