<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.yk.silence.toolbar.CustomTitleBar
            android:id="@+id/title_feedback"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            app:layout_constraintTop_toTopOf="parent"
            app:leftImage="@drawable/ic_back" />

        <TextView
            android:id="@+id/txt_feed_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/text_default"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_feedback" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_feed_content"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_200"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:background="@drawable/btn_10_green_bg"
            app:layout_constraintTop_toBottomOf="@+id/txt_feed_name" />

        <TextView
            android:id="@+id/txt_feed_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/text_upload_photo"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_feed_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rlv_feed_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_10"
            app:layout_constraintTop_toBottomOf="@+id/txt_feed_photo" />

        <TextView
            android:id="@+id/txt_feed_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/text_phone"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rlv_feed_photo" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_feed_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:background="@drawable/btn_10_green_bg"
            app:layout_constraintTop_toBottomOf="@+id/txt_feed_phone" />

        <Button
            android:id="@+id/btn_feed_upload"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_44"
            android:layout_marginStart="@dimen/dp_15"
            android:background="@drawable/btn_all_green_bg"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/text_feedback_submit"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_feed_phone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>